[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratelimiterapi"
version = "1.0.0"
description = "Decorator-based rate limiter with sliding window, burst allowance, per-key limits, and async support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "prabhay759" }]
keywords = ["rate-limit", "throttle", "sliding-window", "async", "decorator", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
ratelimiter-test = "ratelimiter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/prabhay759/ratelimiter"
Repository = "https://github.com/prabhay759/ratelimiter"
Issues = "https://github.com/prabhay759/ratelimiter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ratelimiter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
